--- a/package.json
+++ b/package.json
@@ -1,18 +1,15 @@
 {
   "name": "web-j",
-  "version": "0.1.0",
-  "description": "Scaffold for Spring Boot",
-  "main": "index.js",
+  "version": "0.2.0",
+  "description": "",
+  "main": "lib.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "bin": {
-    "web-j": "index.js"
+      "start": "node lib.js",
+      "test": "echo \"no test specified\" && exit 0"
   },
   "repository": {
-    "type": "git",
-    "url": "git+https://github.com/qixin1991/web-j.git"
+      "type": "git",
+      "url": "git+https://github.com/qixin1991/web-j.git"
   },
   "author": "Qi Xin <me@qixin.io>",
   "license": "ISC"
