--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "web-j",
-  "version": "0.2.0",
-  "description": "",
-  "main": "lib.js",
-  "scripts": {
-      "start": "node lib.js",
-      "test": "echo \"no test specified\" && exit 0"
-  },
-  "repository": {
-      "type": "git",
-      "url": "git+https://github.com/qixin1991/web-j.git"
-  },
-  "author": "Qi Xin <me@qixin.io>",
-  "license": "ISC"
+    "name": "web-j",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/qixin1991/web-j.git"
+    },
+    "bin": {
+        "web-j": "index.js"
+    },
+    "author": "Qi Xin <me@qixin.io>",
+    "license": "ISC"
 }
